# auptitcafe-sdk

./: .gitignore  README.md  pyproject.toml
auptitcafe/: __init__.py  emporter.py  menus.py  plat.py
tests/: test_auptitcafe.py
