[tool.poetry]
name = "auptitcafe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "auptitcafe"}]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
pytest = "^7.3.1"
requests = "^2.30.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
