[tool.poetry]
name = "auptitcafe"
version = "0.1.8"
description = "SDK pour interagir avec http://auptitcafe.nc/menu/"
authors = ["Adrien SALES <Adrien.Sales@gmail.com>"]
readme = "README.md"
packages = [{include = "auptitcafe"}]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
